# jwt-auth-chatbot

./: .env.example  .gitignore  README.md  pyproject.toml
jwt_auth_chatbot/: main.py
jwt_auth_chatbot/api/: auth.py  models.py  routes.py  schemas.py  security.py
jwt_auth_chatbot/openai/: chat.py  prompts.py
