[tool.poetry]
name = "jwt-auth-chatbot"
version = "0.1.0"
description = "Chatbot secured with JWT Authentication"
authors = ["Ricardo <ricardo.olalquiaga@usm.cl>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
sqlalchemy = "^2.0.36"
passlib = "^1.7.4"
fastapi = {extras = ["standard"], version = "^0.115.4"}
pydantic = "^2.0.0"
pyjwt = "^2.9.0"
langchain = "^0.3.7"
langchain-openai = "^0.2.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
main = 'jwt_auth_chatbot.main:main'
